# PriceScraping

./: .dockerignore  .gitignore  .replit  Dockerfile  Dockerfile.lambda  README.md  babel.config.js  build_lambda_package.ps1  cleanup-aws.ps1  deploy-aws.ps1  deploy-docker.ps1  deploy-ec2.ps1  deploy-lambda.ps1  deploy.sh  lambda_handler.py  package-lock.json  package.json  price-scraper-key.pem  price-scraper-key.ppk  product_response.html  pyproject.toml  replit.nix  requirements.txt  run.py  run_debug.py  run_tests.bat  run_tests.py  scrape_results.json  serverless.yml  store-price-api-key.pem  test_api.py  test_raw_scrape.py  vite.config.js
alembic/versions/: 46647dd3a9ec_add_status_url_column_to_request_cache.py
app/: __init__.py  main.py
app/api/: routes.py
app/core/: __init__.py  cache_manager.py  config.py  dependencies.py  logging_config.py  scraper_config.py  scraper_factory.py
app/models/: __init__.py  database.py  product.py
app/routes/: __init__.py  admin_routes.py  db_routes.py  health.py  price_routes.py  stores.py
app/schemas/: __init__.py  models.py  request_schemas.py
app/scrapers/: base.py  (+10 more)
attached_assets/: Pasted-INFO-Will-watch-for-changes-in-these-directories-home-runner-workspace-INFO-Uvicorn-1738352903089.txt  Pasted-INFO-Will-watch-for-changes-in-these-directories-home-runner-workspace-INFO-Uvicorn-1738353676689.txt
data/: scraper.db
events/: test-event.json
scripts/: create_ec2.py  deploy_ec2.sh
test/: test_api.py
tests/: __init__.py  conftest.py  test_admin_routes.py  test_api.py  test_price_routes.py  test_scrapers.py
(+14 files in other folders)
